implement html to pdf feature

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,9 @@ select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !important;
 }
+
+@layer base {
+  img {
+    display: initial;
+  }
+}
